--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>sneka´s personal site</title>
-</head>
+  <link rel="stylesheet" href="css/style.css">
+  </head>
 
-<body>
+  <body>
   <table>
     <tr>
       <td><img src="sneka.png" alt="sneka profile picture"></td>
@@ -81,8 +82,6 @@
     <tr>
       <td>study</td>
       <td>★★</td>
-      <td>eating</td>
-      <td>★★★</td>
     </tr>
   </table>
   <hr>
