--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>my contact details</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <h1>contact details</h1>
